--- a/jh-icbc-vtdc-template.yaml
+++ b/jh-icbc-vtdc-template.yaml
@@ -294,58 +294,58 @@ objects:
             GOGS_PWD=gogs
 
             # Get POC Common libs into GOGS.
-            cat <<EOF > /tmp/data.json
-            {
-              "clone_addr": "https://github.com/rsivphdev/poccommon.git",
-              "uid": 1,
-              "repo_name": "poccommon"
-            }
-            EOF
+            # cat <<EOF > /tmp/data.json
+            # {
+            #   "clone_addr": "https://github.com/rsivphdev/poccommon.git",
+            #   "uid": 1,
+            #   "repo_name": "poccommon"
+            # }
+            # EOF
 
-            _RETURN=$(curl -o /tmp/curl.log -sL -w "%{http_code}" -H "Content-Type: application/json" \
-            -u $GOGS_USER:$GOGS_PWD -X POST http://$GOGS_SVC:3000/api/v1/repos/migrate -d @/tmp/data.json)
+            # _RETURN=$(curl -o /tmp/curl.log -sL -w "%{http_code}" -H "Content-Type: application/json" \
+            # -u $GOGS_USER:$GOGS_PWD -X POST http://$GOGS_SVC:3000/api/v1/repos/migrate -d @/tmp/data.json)
 
-            if [ $_RETURN != "201" ] ;then
-              echo "ERROR: Failed to import pocicbcvtdc GitHub repo"
-              cat /tmp/curl.log
-              exit 255
-            fi
+            # if [ $_RETURN != "201" ] ;then
+            #   echo "ERROR: Failed to import pocicbcvtdc GitHub repo"
+            #   cat /tmp/curl.log
+            #   exit 255
+            # fi
 
-            sleep 5
+            # sleep 5
 
 
-            cat <<EOF > /tmp/data.json
-            {
-              "clone_addr": "https://github.com/rsivphdev/pocicbcvtdc.git",
-              "uid": 1,
-              "repo_name": "jh-icbc-vtdc"
-            }
-            EOF
+            # cat <<EOF > /tmp/data.json
+            # {
+            #   "clone_addr": "https://github.com/rsivphdev/pocicbcvtdc.git",
+            #   "uid": 1,
+            #   "repo_name": "jh-icbc-vtdc"
+            # }
+            # EOF
 
-            _RETURN=$(curl -o /tmp/curl.log -sL -w "%{http_code}" -H "Content-Type: application/json" \
-            -u $GOGS_USER:$GOGS_PWD -X POST http://$GOGS_SVC:3000/api/v1/repos/migrate -d @/tmp/data.json)
+            # _RETURN=$(curl -o /tmp/curl.log -sL -w "%{http_code}" -H "Content-Type: application/json" \
+            # -u $GOGS_USER:$GOGS_PWD -X POST http://$GOGS_SVC:3000/api/v1/repos/migrate -d @/tmp/data.json)
 
-            if [ $_RETURN != "201" ] ;then
-              echo "ERROR: Failed to import pocicbcvtdc GitHub repo"
-              cat /tmp/curl.log
-              exit 255
-            fi
+            # if [ $_RETURN != "201" ] ;then
+            #   echo "ERROR: Failed to import pocicbcvtdc GitHub repo"
+            #   cat /tmp/curl.log
+            #   exit 255
+            # fi
 
-            sleep 5
+            # sleep 5
 
-            cat <<EOF > /tmp/data.json
-            {
-              "type": "gogs",
-              "config": {
-                "url": "https://openshift.default.svc.cluster.local/oapi/v1/namespaces/$CICD_NAMESPACE/buildconfigs/jh-icbc-vtdc-pipeline/webhooks/${WEBHOOK_SECRET}/generic",
-                "content_type": "json"
-              },
-              "events": [
-                "push"
-              ],
-              "active": true
-            }
-            EOF
+            # cat <<EOF > /tmp/data.json
+            # {
+            #   "type": "gogs",
+            #   "config": {
+            #     "url": "https://openshift.default.svc.cluster.local/oapi/v1/namespaces/$CICD_NAMESPACE/buildconfigs/jh-icbc-vtdc-pipeline/webhooks/${WEBHOOK_SECRET}/generic",
+            #     "content_type": "json"
+            #   },
+            #   "events": [
+            #     "push"
+            #   ],
+            #   "active": true
+            # }
+            # EOF
 
             # POC git doesn't have webhooks yet.
             # _RETURN=$(curl -o /tmp/curl.log -sL -w "%{http_code}" -H "Content-Type: application/json" \
